2012-10-30  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/values/styles.xml, res/layout/options.xml: I have started to
	set the new style of app (Thanks Carla).

2012-10-30  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java:
	fixed when the data return to call for get events is bad format,
	before it was fails all app, now it tries to get correct event for
	each line.

2012-10-23  Junichi Satoh  <junichi@rworks.jp>

	* res/values-ja/strings.xml: Traslated string "empty".

2012-10-22  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/values-ja/strings.xml: added string "empty" but I can not
	translate into japanese.
	* res/values-es/strings.xml: added string for translate "empty" into
	spanish.

2012-10-22  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java: improved the
	code style.
	
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java:
	fixed the values criticity_name and criticity_image in the events.

2012-10-22  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/API.java: added more log
	for to make more easy.
	
	* src/pandroid_event_viewer/pandorafms/Core.java: the constant
	TIMEOUT now is 10 seconds instead old 5 seconds that sometimes
	fails.
	
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java:
	added functions "getEvents_v50" and "getEvents_old" for to get
	events list for serveral api pandora versions.
	
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerService.java:
	fixed source code style.

2012-09-13  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/main.xml: removed the typo bug.
	
	* src/pandroid_event_viewer/pandorafms/Core.java, 
	src/pandroid_event_viewer/pandorafms/API.java,
	src/pandroid_event_viewer/pandorafms/About.java,
	src/pandroid_event_viewer/pandorafms/EventList.java: fixed the code
	style.
