@@ -118,7 +118,36 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
-
+                
+				<TextView
+			          android:layout_width="wrap_content"
+			          android:layout_height="wrap_content"
+			          android:paddingLeft="2dp"
+			          android:text="@string/timeout_connections_label_str"
+			          style="@style/options_label"
+			     />
+				<LinearLayout
+				    android:layout_width="fill_parent"
+		            android:layout_height="wrap_content"
+		            android:orientation="horizontal"
+				>
+					<EditText
+						android:id="@+id/timeout_connections"
+						android:layout_height="wrap_content"
+						android:layout_width="wrap_content"
+						android:ems="3"
+						android:inputType="number"
+						android:singleLine="true"
+						android:gravity="right" />
+					<TextView
+			          android:layout_width="wrap_content"
+			          android:layout_height="wrap_content"
+			          android:text="@string/seconds_label_str"
+			          style="@style/options_label"
+			          android:paddingLeft="5dp"
+			          android:layout_gravity="center_vertical"
+			     	  />
+				</LinearLayout>
                 <TableLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -161,20 +190,6 @@
             
             
         </LinearLayout>
-		<TextView
-	          android:layout_width="wrap_content"
-	          android:layout_height="wrap_content"
-	          android:paddingLeft="2dp"
-	          android:text="@string/timeout_connections_label_str"
-	          style="@style/options_label"
-	     />
-		<EditText
-			android:id="@+id/timeout_connections"
-			android:layout_height="wrap_content"
-			android:layout_width="wrap_content"
-			android:ems="3"
-			android:inputType="number"
-			android:singleLine="true" />
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -192,7 +207,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
-                android:stretchColumns="0,1" >
+                android:stretchColumns="0,1"
+                android:padding="10dp">
 
                 <TableRow>
 
