@@ -75,5 +75,6 @@
 	<string name="pandroid_info_long_txt"><p>Esta aplicación se usa para ver de forma autónoma y cómoda, el estado de los eventos resportados por un servidor de monitorización Pandora FMS. Desde esta aplicación podrá ver en tiempo real los eventos, e incluso validar o filtrarlos.</p><p>La configuración por defecto apunta al servidor de demo de Pandora FMS en firefly.artica.es. Cambie la configuración para que apunte a su propio servidor de Pandora FMS.</p></string>
 	<string name="connection_problems">Conexión fallida</string>
 	<string name="empty">- Vacia -</string>
-	<string name="timeout_connections_label_str">Tiempo de espera de las conexiones (en segundos)</string>
+	<string name="timeout_connections_label_str">Tiempo de espera de las conexiones</string>
+	<string name="seconds_label_str">segundos</string>
 </resources>
